@@ -12,7 +12,11 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -36,7 +40,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
-            <version>5.2.0</version>
+            <version>3.4.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -47,5 +51,6 @@
         </dependency>
 
     </dependencies>
+
 
 </project>
